--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,13 +13,13 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.junho.voicecall.ui.main.dashboard.DashboardFragment"
+        android:name="com.junho.voicecall.ui.main.info.InfoFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.junho.voicecall.ui.main.notifications.NotificationsFragment"
+        android:name="com.junho.voicecall.ui.main.search.SearchFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
